# ESPHome-cmsis_dap_tcp_esp32-Wrapper

./: .gitignore  LICENSE  README.md  REUSE.toml  TODO.md  notes.md  setup.cfg
components/cmsis_dap_tcp/: __init__.py  cmsis_dap_tcp_component.cpp  cmsis_dap_tcp_component.h
examples/: openocd_ulx3s_ecp5.md  vanilla.yaml
idf_components/cmsis_dap_tcp_esp32/: CMakeLists.txt  README.md
